Added shared library build.
git-archimport-id: davide@xmailserver.org--v1/libpcl--ml--0.1--patch-1

--- a/pcl/Makefile.am
+++ b/pcl/Makefile.am
@@ -1,6 +1,6 @@
 
 INCLUDES = -I../include
 
-lib_LIBRARIES = libpcl.a
-libpcl_a_SOURCES = pcl.c pcl_version.c
+lib_LTLIBRARIES = libpcl.la
+libpcl_la_SOURCES = pcl.c pcl_version.c
 
