Fixed a library inclusion error in tests/Makefile.am
git-archimport-id: davide@xmailserver.org--v1/libpcl--ml--0.1--patch-2

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,8 +4,8 @@ INCLUDES = -I../include
 noinst_PROGRAMS = cobench cothread
 
 cobench_SOURCES = cobench.c
-cobench_LDADD = ../pcl/libpcl.a
+cobench_LDADD = ../pcl/.libs/libpcl.a
 
 cothread_SOURCES = cothread.c
-cothread_LDADD = ../pcl/libpcl.a
+cothread_LDADD = ../pcl/.libs/libpcl.a
 
