--- a/pcl/Makefile.am
+++ b/pcl/Makefile.am
@@ -1,5 +1,5 @@
 
-INCLUDES = -I../include
+INCLUDES = -I$(srcdir)/../include
 
 lib_LTLIBRARIES = libpcl.la
 libpcl_la_SOURCES = pcl.c pcl_version.c
