--- a/pcl/Makefile.in
+++ b/pcl/Makefile.in
@@ -130,7 +130,7 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 
-INCLUDES = -I../include
+INCLUDES = -I$(srcdir)/../include
 
 lib_LTLIBRARIES = libpcl.la
 libpcl_la_SOURCES = pcl.c pcl_version.c
