--- a/pcl/Makefile.am
+++ b/pcl/Makefile.am
@@ -3,4 +3,5 @@ INCLUDES = -I$(srcdir)/../include
 
 lib_LTLIBRARIES = libpcl.la
 libpcl_la_SOURCES = pcl.c pcl_version.c
+libpcl_la_LDFLAGS = -version-info 1:6:0
 
