--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,8 +4,8 @@ INCLUDES = -I$(srcdir)/../include
 check_PROGRAMS = cobench cothread
 
 cobench_SOURCES = cobench.c
-cobench_LDADD = ../pcl/.libs/libpcl.a
+cobench_LDADD = ../pcl/.libs/libpcl.a -lpthread
 
 cothread_SOURCES = cothread.c
-cothread_LDADD = ../pcl/.libs/libpcl.a
+cothread_LDADD = ../pcl/.libs/libpcl.a -lpthread
 
