--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,8 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(libpcl, 1.8)
-AM_INIT_AUTOMAKE(libpcl, 1.8)
+AC_INIT(libpcl, 1.9)
+AM_INIT_AUTOMAKE(libpcl, 1.9)
 AM_CONFIG_HEADER(config.h)
+AC_CONFIG_MACRO_DIR([m4])
 
 dnl Checks for programs.
 AC_PROG_MAKE_SET
