Import changes from PCL 1.12.

--- a/pcl/Makefile.in
+++ b/pcl/Makefile.in
@@ -205,7 +205,7 @@ top_srcdir = @top_srcdir@
 INCLUDES = -I$(srcdir)/../include
 lib_LTLIBRARIES = libpcl.la
 libpcl_la_SOURCES = pcl.c pcl_version.c pcl_private.c
-libpcl_la_LDFLAGS = -version-info 1:6:0
+libpcl_la_LDFLAGS = -version-info 1:11:0 -lpthread
 all: all-am
 
 .SUFFIXES:
